--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
 <html>
 <title>Student Calendar <\title>
-<\html>
+<\html><head>
+<title>Student Calendar</title>
+</head>
+<body>
+
+<h1>Student Calendar</h1>
+
+</body>
+</html>
