--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>Student Calendar <\title>
-<\html><head>
+<head>
 <title>Student Calendar</title>
 </head>
 <body>
 
 <h1>Student Calendar</h1>
+<p>Contributors: Kevin Jia</p>
 
 </body>
 </html>
