--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< Updated upstream
 <head>
 <title>Student Calendar</title>
 </head>
-<body>
 
-<h1>Student Calendar</h1>
 <p>Contributors: Kevin Jia, Arlen Yu</p>
-
-</body>
-</html>
-=======
-<title>Student Calendar </title>
-</html>
->>>>>>> Stashed changes
+</html
