--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
         var newEvent = {
             title: 'CS135 Midterm',
-            start: new Date(2016, 09, 03)
+            start: new Date(2016, 09, 03),
+    		color: 'yellow',   // an option!
+    		textColor: 'black' // an option!
         };
 	    $('#calendar').fullCalendar({
 	        // put your options and callbacks here
