--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	</script>
 </head>
-<body>
+<bod
 	<button type="button" id="button_id" onClick=>Create new event</button>
 	<div id="calendar"></div>
 </body>
