--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             $('#calendar').fullCalendar( 'renderEvent', newEvent , 'stick');
         });
 
+        var newEvent = {
+            title: 'MATH135 Midterm',
+            start: new Date(2016, 09, 03),
+    		color: 'yellow',   // an option!
+    		textColor: 'black' // an option!
+        };
+
 	    $('#calendar').fullCalendar({
 	        // put your options and callbacks here
 	        theme: true,
