--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 	<title>Student Calendar</title>
 	<link rel='stylesheet' href='css/fullcalendar.css' />
 	<!--<link rel='stylesheet' type='text/css' href='css/jquery-ui.css' />-->
+
+    <link rel="stylesheet" href="css/vex.css" />
+    <link rel="stylesheet" href="css/vex-theme-os.css" />
+    <script src="js/vex.combined.min.js"></script>
+    <script>vex.defaultOptions.className = 'vex-theme-os'</script>
+
 	<script type="text/javascript" src='js/jquery-3.1.1.js'></script>
 	<script type="text/javascript" src='js/moment.js'></script>
 	<script type="text/javascript" src='js/fullcalendar.js'></script>
 	<script type="text/javascript" src = 'js/student-calendar.js'></script>
+
 </head>
 <body>
 	<button type="button" id="button_create" onClick=>Create new event</button>
