added date and time support on onclick events

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Student Calendar</title>
 	<link rel='stylesheet' href='css/fullcalendar.css' />
-	<!--<link rel='stylesheet' type='text/css' href='css/jquery-ui.css' />-->
+	<link rel='stylesheet' type='text/css' href='css/jquery-ui.css' />
 
     <link rel="stylesheet" href="css/vex.css" />
     <link rel="stylesheet" href="css/vex-theme-os.css" />
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-	<button type="button" id="button_create" onClick=>Create new event</button>
+	<!--<button type="button" id="button_create" onClick=>Create new event</button>-->
     <button type="button" id="button_view" onClick=>Change View</button>
 
 	<div id="calendar"></div>
