--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
+<!-- https://www.youtube.com/watch?v=e8TP2FERKls -->
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Student Calendar</title>
-	<link rel='stylesheet' href='css/fullcalendar.css' />
-	<link rel='stylesheet' type='text/css' href='css/jquery-ui.css' />
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/vex.css" />
-    <link rel="stylesheet" href="css/vex-theme-os.css" />
-
-    <script src="js/vex.combined.min.js"></script>
-    <script>vex.defaultOptions.className = 'vex-theme-os'</script>
-
-	<script type="text/javascript" src='js/jquery-3.1.1.js'></script>
-	<script type="text/javascript" src='js/moment.js'></script>
-	<script type="text/javascript" src='js/fullcalendar.js'></script>
-	<script type="text/javascript" src = 'js/student-calendar.js'></script>
-
+	<title>Welcome</title>
 </head>
 <body>
-	<div class="container">
-	<div id="calendar"></div>
-	</div>
+
+<form>
+	<input type="text" name="first" placeholder="Firstname">
+	<input type="text" name="last" placeholder="Lastname">
+	<input type="text" name="uid" placeholder="Username">
+	<input type="password" name="pwd" placeholder="password">
+	<button type="submit">Sign up</button>
+	<a href="calendar.html">Calendar</a>
+</form>
+
 </body>
 </html>
